--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -116,7 +116,7 @@ msgid "service"
 msgstr "изображение"
 
 msgid "services"
-msgstr "излображения сервисов"
+msgstr "изображения сервисов"
 
 msgid "hotel"
 msgstr "отель"
